# rs-com

./: .gitignore  Cargo.toml  README.md  macros.rscom
.github/workflows/: publish.yml  rust.yml
src/: application.rs  main.rs
