[package]
name = "rs-com"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A Really simple serial communication terminal"
homepage = "https://github.com/MadsAndreasen/rs-com"
readme = "README.md"
authors = ["Mads Andreasen <github@andreasen.cc>"]
keywords = ["serialport", "embedded", "terminal", "serial"]


[[bin]]
name = "rscom"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.17", features = ["derive"]}
serialport = {version = "4.5.0"}
crossterm = "0.28.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
